Now the screen to world point logic is working.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -347,6 +347,7 @@
 	<ItemGroup>
 		<Compile Include="Core.cs" />
 		<Compile Include="EditorCameraMovement.cs" />
+		<Compile Include="EditorController.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
