Created system to create UI depending of the specified objects in the bundle.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -348,6 +348,8 @@
 		<Compile Include="Core.cs" />
 		<Compile Include="EditorCameraMovement.cs" />
 		<Compile Include="EditorController.cs" />
+		<Compile Include="EditorUIManager.cs" />
+		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
