Added the LE_Object class, which is present foreach object in the level

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -349,6 +349,7 @@
 		<Compile Include="EditorCameraMovement.cs" />
 		<Compile Include="EditorController.cs" />
 		<Compile Include="EditorUIManager.cs" />
+		<Compile Include="LE_Object.cs" />
 		<Compile Include="LE_UIButtonActionCtrl.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
