Added semifunctional pause menu to the LE.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -348,6 +348,7 @@
 		<Compile Include="Core.cs" />
 		<Compile Include="EditorCameraMovement.cs" />
 		<Compile Include="EditorController.cs" />
+		<Compile Include="EditorPauseLargeButtonsSetter.cs" />
 		<Compile Include="EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
 		<Compile Include="LE_UIButtonActionCtrl.cs" />
