--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -346,21 +346,17 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
-		<Compile Include="EditorCameraMovement.cs" />
-		<Compile Include="EditorController.cs" />
-		<Compile Include="EditorPauseLargeButtonsSetter.cs" />
-		<Compile Include="EditorUIManager.cs" />
+		<Compile Include="Level Editor Itself\EditorCameraMovement.cs" />
+		<Compile Include="Level Editor Itself\EditorController.cs" />
+		<Compile Include="UI Related\EditorPauseLargeButtonsSetter.cs" />
+		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
-		<Compile Include="LE_UIButtonActionCtrl.cs" />
+		<Compile Include="UI Related\LE_UIButtonActionCtrl.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <EmbeddedResource Include="level_editor" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Level Objects\" />
 	</ItemGroup>
 	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
