--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -15,6 +15,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="level_editor" />
+	  <None Remove="level_editor_sprites" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -349,6 +350,7 @@
 		<Compile Include="Level Editor Itself\EditorCameraMovement.cs" />
 		<Compile Include="Level Editor Itself\EditorController.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
+		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="UI Related\EditorPauseLargeButtonsSetter.cs" />
 		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
@@ -360,6 +362,7 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="level_editor" />
+	  <EmbeddedResource Include="level_editor_sprites" />
 	</ItemGroup>
 	
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
