--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -351,6 +351,7 @@
 		<Compile Include="Level Editor Itself\EditorController.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
+		<Compile Include="Logger.cs" />
 		<Compile Include="UI Related\EditorPauseLargeButtonsSetter.cs" />
 		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
