--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -352,12 +352,14 @@
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="Logger.cs" />
+		<Compile Include="Patches.cs" />
 		<Compile Include="UI Related\EditorPauseLargeButtonsSetter.cs" />
 		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
 		<Compile Include="UI Related\LE_UIButtonActionCtrl.cs" />
 		<Compile Include="LevelData.cs" />
 		<Compile Include="LE_ObjectData.cs" />
+		<Compile Include="UI Related\UIInputSubmitFix.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
