--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -353,6 +353,7 @@
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
+		<Compile Include="PlayModeController.cs" />
 		<Compile Include="UI Related\EditorPauseMenuPatcher.cs" />
 		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
