--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -347,8 +347,8 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
-		<Compile Include="Level Editor Itself\EditorCameraMovement.cs" />
-		<Compile Include="Level Editor Itself\EditorController.cs" />
+		<Compile Include="Level_Editor_Itself\EditorCameraMovement.cs" />
+		<Compile Include="Level_Editor_Itself\EditorController.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="Logger.cs" />
@@ -356,13 +356,13 @@
 		<Compile Include="PlayModeController.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Point_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
-		<Compile Include="UI Related\EditorPauseMenuPatcher.cs" />
-		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
+		<Compile Include="UI_Related\EditorPauseMenuPatcher.cs" />
+		<Compile Include="Level_Editor_Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
-		<Compile Include="UI Related\LE_UIButtonActionCtrl.cs" />
+		<Compile Include="UI_Related\LE_UIButtonActionCtrl.cs" />
 		<Compile Include="LevelData.cs" />
 		<Compile Include="LE_ObjectData.cs" />
-		<Compile Include="UI Related\UIInputSubmitFix.cs" />
+		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
