--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -14,6 +14,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="KeybindsList.txt" />
 	  <None Remove="level_editor" />
 	  <None Remove="level_editor_sprites" />
 	</ItemGroup>
@@ -347,26 +348,33 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
-		<Compile Include="Level Editor Itself\EditorCameraMovement.cs" />
-		<Compile Include="Level Editor Itself\EditorController.cs" />
+		<Compile Include="Level_Editor_Itself\EditorCameraMovement.cs" />
+		<Compile Include="Level_Editor_Itself\EditorController.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
 		<Compile Include="PlayModeController.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Health_Pack.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Point_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
-		<Compile Include="UI Related\EditorPauseMenuPatcher.cs" />
-		<Compile Include="Level Editor Itself\EditorUIManager.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Saw.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Vent_With_Smoke_Green.cs" />
+		<Compile Include="UI_Related\EditorPauseMenuPatcher.cs" />
+		<Compile Include="Level_Editor_Itself\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
-		<Compile Include="UI Related\LE_UIButtonActionCtrl.cs" />
+		<Compile Include="UI_Related\LevelButtonController.cs" />
+		<Compile Include="UI_Related\LE_UIButtonActionCtrl.cs" />
 		<Compile Include="LevelData.cs" />
 		<Compile Include="LE_ObjectData.cs" />
-		<Compile Include="UI Related\UIInputSubmitFix.cs" />
+		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <EmbeddedResource Include="KeybindsList2.txt" />
+	  <EmbeddedResource Include="KeybindsList.txt" />
 	  <EmbeddedResource Include="level_editor" />
 	  <EmbeddedResource Include="level_editor_sprites" />
 	</ItemGroup>
