--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -368,6 +368,7 @@
 		<Compile Include="UI_Related\LE_UIButtonActionCtrl.cs" />
 		<Compile Include="LevelData.cs" />
 		<Compile Include="LE_ObjectData.cs" />
+		<Compile Include="UI_Related\NGUI_Utils.cs" />
 		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
