--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -361,6 +361,7 @@
 		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Saw.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Saw_Waypoint.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Switch.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Vent_With_Smoke_Green.cs" />
 		<Compile Include="UI_Related\EditorPauseMenuPatcher.cs" />
 		<Compile Include="Level_Editor_Itself\EditorUIManager.cs" />
