Added ceiling light.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -357,6 +357,7 @@
 		<Compile Include="Patches.cs" />
 		<Compile Include="PlayModeController.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Laser.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Player_Spawn.cs" />
