--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -382,6 +382,7 @@
 		<Compile Include="LE_ObjectData.cs" />
 		<Compile Include="UI_Related\NGUI_Utils.cs" />
 		<Compile Include="UI_Related\UIButtonAsToggle.cs" />
+		<Compile Include="UI_Related\UICustomInputField.cs" />
 		<Compile Include="UI_Related\UIDropdownPatcher.cs" />
 		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="UI_Related\UIToggleCheckedFix.cs" />
