--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -362,6 +362,7 @@
 		<Compile Include="PlayModeController.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Collider.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Flame_Trap.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Laser.cs" />
