Added experimental end trigger.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -364,6 +364,7 @@
 		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Collider.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_End_Trigger.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Flame_Trap.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Laser.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Player_Spawn.cs" />
