Reworked events system

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -352,6 +352,7 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
+		<Compile Include="EventExecuter.cs" />
 		<Compile Include="Level_Editor_Itself\DeathYPlaneCtrl.cs" />
 		<Compile Include="Level_Editor_Itself\EditorCameraMovement.cs" />
 		<Compile Include="Level_Editor_Itself\EditorController.cs" />
