ADDED PRESSURE PLATES!!

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -375,6 +375,7 @@
 		<Compile Include="Specific_Objects_Scripts\LE_Health_Pack.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Point_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Pressure_Plate.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Saw.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Saw_Waypoint.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Switch.cs" />
