--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -366,6 +366,7 @@
 		<Compile Include="Patches.cs" />
 		<Compile Include="PlayModeController.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
+		<Compile Include="Specific_Objects_Scripts\LE_Breakable_Window.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Collider.cs" />
 		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
