--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -358,40 +358,39 @@
 		<Compile Include="Editor\DeathYPlaneCtrl.cs" />
 		<Compile Include="Editor\EditorCameraMovement.cs" />
 		<Compile Include="Editor\EditorController.cs" />
-		<Compile Include="Editor\EditorSelectedObjPanel.cs" />
-		<Compile Include="Editor\EventsUIPageManager.cs" />
+		<Compile Include="Editor\UI\EventsUIPageManager.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
 		<Compile Include="PlayModeController.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Breakable_Window.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Collider.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_End_Trigger.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Flame_Trap.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Laser.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Player_Spawn.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Health_Pack.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Point_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Pressure_Plate.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Saw.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Saw_Waypoint.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Screen.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Switch.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Vent_With_Smoke_Green.cs" />
+		<Compile Include="LE_Objects\LE_Ammo_Pack.cs" />
+		<Compile Include="LE_Objects\LE_Breakable_Window.cs" />
+		<Compile Include="LE_Objects\LE_Ceiling_Light.cs" />
+		<Compile Include="LE_Objects\LE_Collider.cs" />
+		<Compile Include="LE_Objects\LE_Cube.cs" />
+		<Compile Include="LE_Objects\LE_End_Trigger.cs" />
+		<Compile Include="LE_Objects\LE_Flame_Trap.cs" />
+		<Compile Include="LE_Objects\LE_Laser.cs" />
+		<Compile Include="LE_Objects\LE_Player_Spawn.cs" />
+		<Compile Include="LE_Objects\LE_Health_Pack.cs" />
+		<Compile Include="LE_Objects\LE_Point_Light.cs" />
+		<Compile Include="LE_Objects\LE_Directional_Light.cs" />
+		<Compile Include="LE_Objects\LE_Pressure_Plate.cs" />
+		<Compile Include="LE_Objects\LE_Saw.cs" />
+		<Compile Include="LE_Objects\LE_Saw_Waypoint.cs" />
+		<Compile Include="LE_Objects\LE_Screen.cs" />
+		<Compile Include="LE_Objects\LE_Switch.cs" />
+		<Compile Include="LE_Objects\LE_Vent_With_Smoke_Green.cs" />
 		<Compile Include="TranslationsManager.cs" />
 		<Compile Include="Editor\EditorPauseMenuPatcher.cs" />
-		<Compile Include="Editor\EditorUIManager.cs" />
+		<Compile Include="Editor\UI\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
 		<Compile Include="UI_Related\LevelButtonController.cs" />
 		<Compile Include="UI_Related\LE_CustomErrorPopups.cs" />
 		<Compile Include="UI_Related\LE_UIButtonActionCtrl.cs" />
-		<Compile Include="LevelData.cs" />
-		<Compile Include="LE_ObjectData.cs" />
+		<Compile Include="SaveSystem\LevelData.cs" />
+		<Compile Include="SaveSystem\LE_ObjectData.cs" />
 		<Compile Include="UI_Related\NGUI_Utils.cs" />
 		<Compile Include="UI_Related\UIButtonAsToggle.cs" />
 		<Compile Include="UI_Related\UIButtonMultiple.cs" />
