Added context menu prototype.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -352,6 +352,7 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
+		<Compile Include="Editor\UI\ContextMenu.cs" />
 		<Compile Include="Editor\UI\EditorObjectsToBuildUI.cs" />
 		<Compile Include="Editor\UI\SelectedObjPanel.cs" />
 		<Compile Include="Editor\UI\TextEditorUI.cs" />
