--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -367,7 +367,13 @@
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
-		<Compile Include="PlayModeController.cs" />
+		<Compile Include="Playmode\Patches\ChapterRestartPatch.cs" />
+		<Compile Include="Playmode\Patches\ChapterTextPatches.cs" />
+		<Compile Include="Playmode\Patches\DeathLimitPatch.cs" />
+		<Compile Include="Playmode\Patches\GamePausePatch.cs" />
+		<Compile Include="Playmode\Patches\PlayerDeathPatch.cs" />
+		<Compile Include="Playmode\Patches\PlaySavePatches.cs" />
+		<Compile Include="Playmode\PlayModeController.cs" />
 		<Compile Include="LE_Objects\LE_Ammo_Pack.cs" />
 		<Compile Include="LE_Objects\LE_Breakable_Window.cs" />
 		<Compile Include="LE_Objects\LE_Ceiling_Light.cs" />
