--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -410,6 +410,7 @@
 		<Compile Include="UI_Related\NGUI_Utils.cs" />
 		<Compile Include="UI_Related\UIButtonAsToggle.cs" />
 		<Compile Include="UI_Related\UIButtonMultiple.cs" />
+		<Compile Include="UI_Related\UISmallButtonMultiple.cs" />
 		<Compile Include="UI_Related\UIButtonPatcher.cs" />
 		<Compile Include="UI_Related\UICustomInputField.cs" />
 		<Compile Include="UI_Related\UIDropdownPatcher.cs" />
