Created the converter.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -395,6 +395,7 @@
 		<Compile Include="LE_Objects\LE_Vent_With_Smoke_Green.cs" />
 		<Compile Include="SaveSystem\Converters\LEIgnoreDefaultValuesInLEEvents.cs" />
 		<Compile Include="SaveSystem\Converters\LEPropertiesConverterNew.cs" />
+		<Compile Include="SaveSystem\Converters\LevelObjectDataConverter.cs" />
 		<Compile Include="SaveSystem\Converters\OldPropertiesRename.cs" />
 		<Compile Include="SaveSystem\SavePatches.cs" />
 		<Compile Include="SaveSystem\SerializableTypes\ColorSerializable.cs" />
