--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -368,6 +368,7 @@
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
+		<Compile Include="Playmode\Patches\ChapterLocPatch.cs" />
 		<Compile Include="Playmode\Patches\ChapterRestartPatch.cs" />
 		<Compile Include="Playmode\Patches\ChapterTextPatches.cs" />
 		<Compile Include="Playmode\Patches\DeathLimitPatch.cs" />
