--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -394,6 +394,7 @@
 		<Compile Include="LE_Objects\LE_Screen.cs" />
 		<Compile Include="LE_Objects\LE_Switch.cs" />
 		<Compile Include="LE_Objects\LE_Vent_With_Smoke_Green.cs" />
+		<Compile Include="Playmode\PlaymodePauseMenuPatcher.cs" />
 		<Compile Include="SaveSystem\Converters\LEIgnoreDefaultValuesInLEEvents.cs" />
 		<Compile Include="SaveSystem\Converters\LEPropertiesConverterNew.cs" />
 		<Compile Include="SaveSystem\Converters\LevelObjectDataConverter.cs" />
