--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -352,47 +352,75 @@
 
 	<ItemGroup>
 		<Compile Include="Core.cs" />
+		<Compile Include="Editor\UI\ContextMenu.cs" />
+		<Compile Include="Editor\UI\EditorObjectsToBuildUI.cs" />
+		<Compile Include="Editor\UI\GlobalPropertiesPanel.cs" />
+		<Compile Include="Editor\UI\SelectedObjPanel.cs" />
+		<Compile Include="Editor\UI\TextEditorUI.cs" />
 		<Compile Include="EventExecuter.cs" />
-		<Compile Include="Level_Editor_Itself\DeathYPlaneCtrl.cs" />
-		<Compile Include="Level_Editor_Itself\EditorCameraMovement.cs" />
-		<Compile Include="Level_Editor_Itself\EditorController.cs" />
-		<Compile Include="Level_Editor_Itself\EventsUIPageManager.cs" />
+		<Compile Include="Editor\DeathYPlaneCtrl.cs" />
+		<Compile Include="Editor\EditorCameraMovement.cs" />
+		<Compile Include="Editor\EditorController.cs" />
+		<Compile Include="Editor\UI\EventsUIPageManager.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
+		<Compile Include="LE_Objects\LE_Small_Screen.cs" />
+		<Compile Include="LE_Objects\LE_Trigger.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Patches.cs" />
-		<Compile Include="PlayModeController.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Ammo_Pack.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Ceiling_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Collider.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Cube.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_End_Trigger.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Flame_Trap.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Laser.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Player_Spawn.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Health_Pack.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Point_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Directional_Light.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Saw.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Saw_Waypoint.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Switch.cs" />
-		<Compile Include="Specific_Objects_Scripts\LE_Vent_With_Smoke_Green.cs" />
+		<Compile Include="Playmode\Patches\ChapterLocPatch.cs" />
+		<Compile Include="Playmode\Patches\ChapterRestartPatch.cs" />
+		<Compile Include="Playmode\Patches\ChapterTextPatches.cs" />
+		<Compile Include="Playmode\Patches\DeathLimitPatch.cs" />
+		<Compile Include="Playmode\Patches\GamePausePatch.cs" />
+		<Compile Include="Playmode\Patches\PlayerDeathPatch.cs" />
+		<Compile Include="Playmode\Patches\PlaySavePatches.cs" />
+		<Compile Include="Playmode\PlayModeController.cs" />
+		<Compile Include="LE_Objects\LE_Ammo_Pack.cs" />
+		<Compile Include="LE_Objects\LE_Breakable_Window.cs" />
+		<Compile Include="LE_Objects\LE_Ceiling_Light.cs" />
+		<Compile Include="LE_Objects\LE_Collider.cs" />
+		<Compile Include="LE_Objects\LE_Cube.cs" />
+		<Compile Include="LE_Objects\LE_End_Trigger.cs" />
+		<Compile Include="LE_Objects\LE_Flame_Trap.cs" />
+		<Compile Include="LE_Objects\LE_Laser.cs" />
+		<Compile Include="LE_Objects\LE_Player_Spawn.cs" />
+		<Compile Include="LE_Objects\LE_Health_Pack.cs" />
+		<Compile Include="LE_Objects\LE_Point_Light.cs" />
+		<Compile Include="LE_Objects\LE_Directional_Light.cs" />
+		<Compile Include="LE_Objects\LE_Pressure_Plate.cs" />
+		<Compile Include="LE_Objects\LE_Saw.cs" />
+		<Compile Include="LE_Objects\LE_Saw_Waypoint.cs" />
+		<Compile Include="LE_Objects\LE_Screen.cs" />
+		<Compile Include="LE_Objects\LE_Switch.cs" />
+		<Compile Include="LE_Objects\LE_Vent_With_Smoke_Green.cs" />
+		<Compile Include="Playmode\PlaymodePauseMenuPatcher.cs" />
+		<Compile Include="SaveSystem\Converters\LEIgnoreDefaultValuesInLEEvents.cs" />
+		<Compile Include="SaveSystem\Converters\LEPropertiesConverterNew.cs" />
+		<Compile Include="SaveSystem\Converters\LevelObjectDataConverter.cs" />
+		<Compile Include="SaveSystem\Converters\OldPropertiesRename.cs" />
+		<Compile Include="SaveSystem\SavePatches.cs" />
+		<Compile Include="SaveSystem\SerializableTypes\ColorSerializable.cs" />
+		<Compile Include="SaveSystem\SerializableTypes\Vector3Serializable.cs" />
 		<Compile Include="TranslationsManager.cs" />
-		<Compile Include="UI_Related\EditorPauseMenuPatcher.cs" />
-		<Compile Include="Level_Editor_Itself\EditorUIManager.cs" />
+		<Compile Include="Editor\EditorPauseMenuPatcher.cs" />
+		<Compile Include="Editor\UI\EditorUIManager.cs" />
 		<Compile Include="LE_Object.cs" />
 		<Compile Include="UI_Related\LevelButtonController.cs" />
 		<Compile Include="UI_Related\LE_CustomErrorPopups.cs" />
 		<Compile Include="UI_Related\LE_UIButtonActionCtrl.cs" />
-		<Compile Include="LevelData.cs" />
-		<Compile Include="LE_ObjectData.cs" />
+		<Compile Include="SaveSystem\LevelData.cs" />
+		<Compile Include="SaveSystem\LE_ObjectData.cs" />
 		<Compile Include="UI_Related\NGUI_Utils.cs" />
 		<Compile Include="UI_Related\UIButtonAsToggle.cs" />
+		<Compile Include="UI_Related\UIButtonMultiple.cs" />
+		<Compile Include="UI_Related\UISmallButtonMultiple.cs" />
 		<Compile Include="UI_Related\UIButtonPatcher.cs" />
 		<Compile Include="UI_Related\UICustomInputField.cs" />
 		<Compile Include="UI_Related\UIDropdownPatcher.cs" />
 		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="UI_Related\UIToggleCheckedFix.cs" />
+		<Compile Include="UI_Related\UITogglePatcher.cs" />
 		<Compile Include="Utilities.cs" />
 	</ItemGroup>
 
