--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -364,6 +364,7 @@
 		<Compile Include="Editor\UI\EventsUIPageManager.cs" />
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
+		<Compile Include="LE_Objects\LE_Door.cs" />
 		<Compile Include="LE_Objects\LE_Small_Screen.cs" />
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
 		<Compile Include="Logger.cs" />
