--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -365,6 +365,7 @@
 		<Compile Include="LE_MenuUIManager.cs" />
 		<Compile Include="ExternalSpriteLoader.cs" />
 		<Compile Include="LE_Objects\LE_Door.cs" />
+		<Compile Include="LE_Objects\LE_Door_V2.cs" />
 		<Compile Include="LE_Objects\LE_Laser_Field.cs" />
 		<Compile Include="LE_Objects\LE_Small_Screen.cs" />
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
