Changed the names of Utilities.cs (Now Utils.cs)

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -426,7 +426,7 @@
 		<Compile Include="UI_Related\UIInputSubmitFix.cs" />
 		<Compile Include="UI_Related\UIToggleCheckedFix.cs" />
 		<Compile Include="UI_Related\UITogglePatcher.cs" />
-		<Compile Include="Utilities.cs" />
+		<Compile Include="Utils.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
