Added "Scale Text" attribute for screens.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -370,6 +370,7 @@
 		<Compile Include="LE_Objects\LE_Small_Screen.cs" />
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
 		<Compile Include="Logger.cs" />
+		<Compile Include="Misc\ScaleScreenText.cs" />
 		<Compile Include="Patches.cs" />
 		<Compile Include="Playmode\Patches\ChapterLocPatch.cs" />
 		<Compile Include="Playmode\Patches\ChapterRestartPatch.cs" />
