--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -51,6 +51,7 @@
 		<Compile Include="LE_Objects\LE_Laser_Field.cs" />
 		<Compile Include="LE_Objects\LE_Small_Screen.cs" />
 		<Compile Include="LE_Objects\LE_Trigger.cs" />
+		<Compile Include="LE_Objects\LE_Water.cs" />
 		<Compile Include="LE_Objects\LE_Waypoint.cs" />
 		<Compile Include="Logger.cs" />
 		<Compile Include="Misc\ScaleScreenText.cs" />
