Added first version of saw waypoints working with the new wayponts system.

--- a/FS_LevelEditor.csproj
+++ b/FS_LevelEditor.csproj
@@ -113,6 +113,7 @@
 		<Compile Include="UI_Related\UITogglePatcher.cs" />
 		<Compile Include="Utils.cs" />
 		<Compile Include="WaypointSupport.cs" />
+		<Compile Include="WaypointSupports\SawWaypointSupport.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
